--- a/public/assets/sass/template/sections/_about.scss
+++ b/public/assets/sass/template/sections/_about.scss
@@ -25,7 +25,7 @@
 }
 
 .marquee-wrap {
-    background: #1601AC;
+    background: black;
     padding: 31px 0;
     .marquee__group {
         .m-item {
