--- a/public/assets/sass/custom.scss
+++ b/public/assets/sass/custom.scss
@@ -50,3 +50,23 @@
   font-weight: 600 !important;
   font-size: larger !important;
 }
+.response-message {
+  margin-top: 20px;
+  padding: 15px;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
+
+  &.success {
+    background-color: #d4edda; // Light green background
+    color: #155724; // Dark green text
+    border: 1px solid #c3e6cb; // Green border
+  }
+
+  &.error {
+    background-color: #f8d7da; // Light red background
+    color: #721c24; // Dark red text
+    border: 1px solid #f5c6cb; // Red border
+  }
+}
